# ideal-octo-waffle

./: .gitignore  README.md
android/: build.gradle  gradle.properties  local.properties.template  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/rustjemalloc/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
core/: Cargo.toml  build.rs
core/src/: lib.rs
