[package]
name = "rust_jemalloc_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_jemalloc_core"
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
tikv-jemalloc-ctl = "0.6.0"
tikv-jemalloc-sys = { version = "0.6.0", features = ["profiling"] }

[build-dependencies]
cc = "1.0"